apps/traefik/dashboard/dashboard-traefik.yaml
# Middleware auth
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: traefik-auth-users
  namespace: traefik
spec:
  basicAuth:
    secret: traefik-dashboard-auth
---
# Dashboard definition
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: dashboard
  namespace: traefik
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`traefik.lab.com`) && (PathPrefix(`/dashboard`) || PathPrefix(`/api`))
      kind: Rule
      services:
        - name: api@internal
          kind: TraefikService
      middlewares:
      - name: traefik-auth-users
  tls:
      secretName: traefik-dashboard-tls
